# nn_adaptive_controller

./: CMakeLists.txt  README.md  package.xml
include/controller_network/: architecture.h  custom_dataset.h  dataset_gen_node.h  dataset_reader.h
include/neural_adaptive_controller/: common.h  neural_adaptive_controller.h  parameters.h  parameters_ros.h
launch/: controller.launch
resource/: controller.yaml  data copy.csv  pelican.yaml
src/controller_network/: architecture.cpp  custom_dataset.cpp  data.csv  dataset_gen_node.cpp  dataset_reader.cpp  model.pt  opt.pt
src/neural_adaptive_controller/: neural_adaptive_controller.cpp  neural_adaptive_controller_node.cpp
test/: test_architecture.cpp  test_controller.cpp
